Added an abstract base class to define the interface of all platform-specific serial port implementations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project( SerialPort )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_library(SerialPort SHARED src/SerialPort.cpp)
+add_library(SerialPort SHARED 
+"src/serial_port.cc"
+"src/interface.cc" "src/interface.h"
+"src/serial_port_windows.cc" "src/serial_port_windows.h")
 
 target_include_directories (SerialPort PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
