Added CMake config for WSL build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ project( SerialPort )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_library(SerialPort SHARED 
+add_library(SerialPort SHARED
 "src/serial_port.cc"
 "src/interface.cc" "src/interface.h"
-"src/serial_port_windows.cc" "src/serial_port_windows.h" "include/serial_port/types.h")
+"src/serial_port_windows.cc" "src/serial_port_windows.h" 
+"src/serial_port_linux.cc" "src/serial_port_linux.h"
+"include/serial_port/types.h")
 
 target_include_directories (SerialPort PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
