Added some (extremely basic) unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,23 @@
-cmake_minimum_required( VERSION 3.0 )
+cmake_minimum_required(VERSION 3.14)
 
 project( SerialPort )
 
+# GoogleTest requires at least C++11
+set(CMAKE_CXX_STANDARD 11)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_library(SerialPort SHARED
+add_library(SerialPort STATIC
 "src/serial_port.cc"
 "src/interface.cc" "src/interface.h"
 "src/serial_port_windows.cc" "src/serial_port_windows.h" 
@@ -12,3 +25,19 @@ add_library(SerialPort SHARED
 "include/serial_port/types.h")
 
 target_include_directories (SerialPort PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+enable_testing()
+
+add_executable(
+  "serial_port_tests"
+  "test/tests.cc"
+)
+
+target_link_libraries(
+  serial_port_tests
+  gtest_main
+  SerialPort
+)
+
+include(GoogleTest)
+gtest_discover_tests(serial_port_tests)
