Changed the library output location to /lib.
Added a Release configuration for Windows and WSL.

--- a/.gitignore
+++ b/.gitignore
@@ -348,5 +348,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
-/out/build/x64-Debug
-/out/build/WSL-GCC-Debug
+/out
+/lib
