--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,6 +23,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Install socat
+      # Installs socat to fake some serial ports
+      run: sudo apt install socat
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
