--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,7 @@ jobs:
       run: sudo apt install socat
     
     - name: Setup virtual serial ports
-      run: test/setup_virtual_ports.sh
+      run: ./test/setup_virtual_ports.sh
     
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
