--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,7 @@ add_library(SerialPort STATIC
 
 target_include_directories (SerialPort PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-# Because we need serial ports for testing, testing should be disabled in the repo and only enabled locally
-# enable_testing()
+enable_testing()
 
 add_executable(
   "serial_port_tests"
