--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -45,4 +45,6 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-      
+    
+    - name: Teardown virtual serial ports
+      run: pkill socat
