--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,7 +2,7 @@ name: CMake
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, STRUCTURE_Setup_CI ]
   pull_request:
     branches: [ main ]
 
@@ -19,7 +19,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
+      fail-fast: false
 
     steps:
     - uses: actions/checkout@v2
@@ -29,7 +30,10 @@ jobs:
       run: sudo apt install socat
     
     - name: Setup virtual serial ports
-      run: test/setup_virtual_ports.sh
+      run: ./test/setup_virtual_ports.sh
+      
+    - name: Echo serial port names
+      run: ls -l
     
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -44,5 +48,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
-      
+      run: ctest -C ${{env.BUILD_TYPE}} --verbose
+    
+    - name: Teardown virtual serial ports
+      run: sudo pkill socat
