--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,7 +2,7 @@ name: CMake
 
 on:
   push:
-    branches: [ main, STRUCTURE_Setup_CI ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
