--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -20,9 +20,9 @@ jobs:
       uses: mattnotmitt/doxygen-action@v1.1.0
       with:
         # Path to Doxyfile
-        doxyfile-path: "./docs/Doxyfile" # default is ./Doxyfile
+        doxyfile-path: "./doc/Doxyfile"
         # Working directory
-        working-directory: "." # default is .
+        working-directory: "."
     
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
