Changing doc folder to docs

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -20,7 +20,7 @@ jobs:
       uses: mattnotmitt/doxygen-action@v1.1.0
       with:
         # Path to Doxyfile
-        doxyfile-path: "./doc/Doxyfile"
+        doxyfile-path: "./docs/Doxyfile"
         # Working directory
         working-directory: "."
     
@@ -28,4 +28,4 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./doc/html
+        publish_dir: ./docs/html
