--- a/.github/workflows/cmake_osx.yml
+++ b/.github/workflows/cmake_osx.yml
@@ -1,4 +1,4 @@
-name: CMake
+name: CMake_OSX
 
 on:
   [push, pull_request]
@@ -13,21 +13,17 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest]
-      fail-fast: false
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
     
     - name: Install socat
       # Installs socat to fake some serial ports
-      run: sudo brew install socat
+      run: brew install socat
     
     - name: Setup virtual serial ports
-      run: ./test/setup_virtual_ports.sh
+      run: sudo ./test/setup_virtual_ports.sh
       
     - name: Echo serial port names
       run: ls -l
