--- a/.github/workflows/cmake_linux.yml
+++ b/.github/workflows/cmake_linux.yml
@@ -41,7 +41,9 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}} --verbose
+      run: |
+      ls -l
+      ctest -C ${{env.BUILD_TYPE}} --verbose
     
     - name: Teardown virtual serial ports
       run: sudo pkill socat
