--- a/.github/workflows/cmake_linux.yml
+++ b/.github/workflows/cmake_linux.yml
@@ -36,7 +36,7 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        sudo bash ../test/setup_virtual_ports.sh
+        bash ../test/setup_virtual_ports.sh
         ls -l
         ctest -C ${{env.BUILD_TYPE}} --verbose
     
